// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`toHTML renders full spec as HTML document 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>test-lib API Reference</title>
  <meta name="description" content="A test library">
  <style>
:root {
  --text: #1a1a1a;
  --text-muted: #666;
  --bg: #fff;
  --bg-code: #f5f5f5;
  --border: #e5e5e5;
  --accent: #0066cc;
  --font-mono: 'SF Mono', Monaco, 'Cascadia Code', monospace;
  --font-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
}
@media (prefers-color-scheme: dark) {
  :root {
    --text: #e5e5e5;
    --text-muted: #999;
    --bg: #1a1a1a;
    --bg-code: #2a2a2a;
    --border: #333;
    --accent: #4da6ff;
  }
}
* { box-sizing: border-box; margin: 0; padding: 0; }
body {
  font-family: var(--font-sans);
  line-height: 1.6;
  color: var(--text);
  background: var(--bg);
  max-width: 900px;
  margin: 0 auto;
  padding: 2rem;
}
h1, h2, h3, h4 { margin-top: 2rem; margin-bottom: 1rem; }
h1 { font-size: 2rem; border-bottom: 2px solid var(--border); padding-bottom: 0.5rem; }
h2 { font-size: 1.5rem; color: var(--text-muted); }
h3 { font-size: 1.1rem; }
p { margin-bottom: 1rem; }
code {
  font-family: var(--font-mono);
  background: var(--bg-code);
  padding: 0.2em 0.4em;
  border-radius: 4px;
  font-size: 0.9em;
}
pre {
  background: var(--bg-code);
  padding: 1rem;
  border-radius: 8px;
  overflow-x: auto;
  margin: 1rem 0;
}
pre code { background: none; padding: 0; }
.signature { font-family: var(--font-mono); font-size: 0.95rem; }
.deprecated { opacity: 0.6; }
.deprecated::before { content: "[Deprecated] "; color: #cc6600; }
.badge {
  display: inline-block;
  padding: 0.2em 0.5em;
  font-size: 0.75rem;
  border-radius: 4px;
  background: var(--accent);
  color: white;
  margin-left: 0.5rem;
}
.param-table { width: 100%; border-collapse: collapse; margin: 1rem 0; }
.param-table th, .param-table td {
  text-align: left;
  padding: 0.75rem;
  border-bottom: 1px solid var(--border);
}
.param-table th { font-weight: 600; color: var(--text-muted); }
.kind-section { margin-top: 3rem; }
.export-card {
  border: 1px solid var(--border);
  border-radius: 8px;
  padding: 1.5rem;
  margin: 1rem 0;
}
.export-card h3 { margin-top: 0; }
a { color: var(--accent); text-decoration: none; }
a:hover { text-decoration: underline; }
nav { margin-bottom: 2rem; }
nav ul { list-style: none; display: flex; flex-wrap: wrap; gap: 1rem; }
nav a { padding: 0.5rem 1rem; background: var(--bg-code); border-radius: 4px; }
</style>
  
</head>
<body>
  <main>
    
    <header>
      <h1>test-lib API Reference</h1>
      <p>A test library</p>
    </header>
    <nav><ul><li><strong>functions:</strong> <a href="#greet">greet</a></li><li><strong>classs:</strong> <a href="#Logger">Logger</a></li><li><strong>enums:</strong> <a href="#LogLevel">LogLevel</a></li></ul></nav>
    
        <section class="kind-section">
          <h2>Functions</h2>
          
    <article class="export-card" id="greet">
      <h3>greet</h3>
      <pre class="signature"><code>function greet(name: string): string</code></pre>
      <p>Greet a user.</p>
      
    <h3>Parameters</h3>
    <table class="param-table">
      <thead>
        <tr><th>Name</th><th>Type</th><th>Required</th><th>Description</th></tr>
      </thead>
      <tbody>
        <tr>
          <td><code>name</code></td>
          <td><code>string</code></td>
          <td>required</td>
          <td>User name</td>
        </tr></tbody>
    </table>
    <h3>Returns</h3>
    <p><code>string</code></p>
    <p>Greeting</p><h3>Examples</h3><pre><code class="language-ts">greet(&quot;World&quot;)</code></pre>
    </article>
        </section>
        <section class="kind-section">
          <h2>Classs</h2>
          
    <article class="export-card deprecated" id="Logger">
      <h3>Logger<span class="badge">Deprecated</span></h3>
      <pre class="signature"><code>class Logger</code></pre>
      <p>Logger class.</p>
      
    <h3>Properties</h3>
    <table class="param-table">
      <thead><tr><th>Name</th><th>Type</th><th>Description</th></tr></thead>
      <tbody>
        <tr>
          <td><code>level</code></td>
          <td><code>string</code></td>
          <td>-</td>
        </tr></tbody>
    </table><h3>Methods</h3>
        <div class="method">
          <h4><code>info(): void</code></h4>
          
        </div>
    </article>
        </section>
        <section class="kind-section">
          <h2>Enums</h2>
          
    <article class="export-card" id="LogLevel">
      <h3>LogLevel</h3>
      <pre class="signature"><code>enum LogLevel</code></pre>
      
      <h3>Members</h3><ul><li><code>DEBUG</code> - Debug</li><li><code>INFO</code> - Info</li></ul>
    </article>
        </section>
  </main>
</body>
</html>"
`;

exports[`toHTML renders single export 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>greet | test-lib</title>
  <style>
:root {
  --text: #1a1a1a;
  --text-muted: #666;
  --bg: #fff;
  --bg-code: #f5f5f5;
  --border: #e5e5e5;
  --accent: #0066cc;
  --font-mono: 'SF Mono', Monaco, 'Cascadia Code', monospace;
  --font-sans: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
}
@media (prefers-color-scheme: dark) {
  :root {
    --text: #e5e5e5;
    --text-muted: #999;
    --bg: #1a1a1a;
    --bg-code: #2a2a2a;
    --border: #333;
    --accent: #4da6ff;
  }
}
* { box-sizing: border-box; margin: 0; padding: 0; }
body {
  font-family: var(--font-sans);
  line-height: 1.6;
  color: var(--text);
  background: var(--bg);
  max-width: 900px;
  margin: 0 auto;
  padding: 2rem;
}
h1, h2, h3, h4 { margin-top: 2rem; margin-bottom: 1rem; }
h1 { font-size: 2rem; border-bottom: 2px solid var(--border); padding-bottom: 0.5rem; }
h2 { font-size: 1.5rem; color: var(--text-muted); }
h3 { font-size: 1.1rem; }
p { margin-bottom: 1rem; }
code {
  font-family: var(--font-mono);
  background: var(--bg-code);
  padding: 0.2em 0.4em;
  border-radius: 4px;
  font-size: 0.9em;
}
pre {
  background: var(--bg-code);
  padding: 1rem;
  border-radius: 8px;
  overflow-x: auto;
  margin: 1rem 0;
}
pre code { background: none; padding: 0; }
.signature { font-family: var(--font-mono); font-size: 0.95rem; }
.deprecated { opacity: 0.6; }
.deprecated::before { content: "[Deprecated] "; color: #cc6600; }
.badge {
  display: inline-block;
  padding: 0.2em 0.5em;
  font-size: 0.75rem;
  border-radius: 4px;
  background: var(--accent);
  color: white;
  margin-left: 0.5rem;
}
.param-table { width: 100%; border-collapse: collapse; margin: 1rem 0; }
.param-table th, .param-table td {
  text-align: left;
  padding: 0.75rem;
  border-bottom: 1px solid var(--border);
}
.param-table th { font-weight: 600; color: var(--text-muted); }
.kind-section { margin-top: 3rem; }
.export-card {
  border: 1px solid var(--border);
  border-radius: 8px;
  padding: 1.5rem;
  margin: 1rem 0;
}
.export-card h3 { margin-top: 0; }
a { color: var(--accent); text-decoration: none; }
a:hover { text-decoration: underline; }
nav { margin-bottom: 2rem; }
nav ul { list-style: none; display: flex; flex-wrap: wrap; gap: 1rem; }
nav a { padding: 0.5rem 1rem; background: var(--bg-code); border-radius: 4px; }
</style>
  
</head>
<body>
  <main>
    <h1>greet</h1>
    
    <article class="export-card" id="greet">
      <h3>greet</h3>
      <pre class="signature"><code>function greet(name: string): string</code></pre>
      <p>Greet a user.</p>
      
    <h3>Parameters</h3>
    <table class="param-table">
      <thead>
        <tr><th>Name</th><th>Type</th><th>Required</th><th>Description</th></tr>
      </thead>
      <tbody>
        <tr>
          <td><code>name</code></td>
          <td><code>string</code></td>
          <td>required</td>
          <td>User name</td>
        </tr></tbody>
    </table>
    <h3>Returns</h3>
    <p><code>string</code></p>
    <p>Greeting</p><h3>Examples</h3><pre><code class="language-ts">greet(&quot;World&quot;)</code></pre>
    </article>
  </main>
</body>
</html>"
`;
